--- a/.gitlab-ci-with-tags.yml
+++ b/.gitlab-ci-with-tags.yml
@@ -13,6 +13,8 @@ variables:
 
 checkmarx-scan:
   stage: test
+  tags:
+    - mariner                     # <-- must match an available runner tag
   image:
     name: checkmarx/${CHECKMARX_DOCKER_IMAGE}
     entrypoint: [""]
